# custom-slide-annotation

./: .gitignore  README.md  financial_slide_agent.py  pyproject.toml
backend/: app.py  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  ChatPlayground.tsx  SlideEditor.tsx  SlidePdfViewer.tsx  TraceMetadataPanel.tsx  index.css
