[project]
name = "slide-viewer-backend"
version = "0.1.0"
description = "Backend API for fetching LangSmith traces and uploading PPTX to Google Drive"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "langsmith>=0.1.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.25.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "python-dotenv>=1.0.0",
    "python-pptx>=0.6.21",
    "pandas>=2.0.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
]

[tool.setuptools]
packages = []

